# acacia

./: .gitignore  CMakeLists.txt  readme.md
_old/client/: acacia_client_fuse_operations.c
_old/cmake/: MSGPACKConfig.cmake  ZEROMQConfig.cmake
_old/common/: CMakeLists.txt  acacia_common_test.py  acacia_context_internal.h  acacia_file_info.c  acacia_file_info_test.c
_old/include/: acacia.h
_old/server/: CMakeLists.txt
acacia/: __init__.py  client.py
client/: CMakeLists.txt  acacia_client.c  acacia_client_fuse_operations.h
cmake/: FUSEConfig.cmake  LIBEVConfig.cmake
common/: acacia_context.c
include/: acacia_context.h  acacia_file_info.h  acacia_status.h
tests/: test_client.py
